implement csv upload

--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "jszip": "^3.10.1",
+    "papaparse": "^5.4.1",
     "qrcode": "^1.5.3",
     "vue": "^3.3.11"
   },
